src/objects/APTS_Agreement_SAP_Setting__c.object
<CustomObject>
    <description>Used to enable/disable auto creation of MSPA agreement in SAP, and Block MSPA agreement in SAP</description>
    <fields>
        <fullName>APTS_Auto_Create_MSPA_In_SAP_On_Approval__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, system will create MSPA type agreement automatically in SAP upon approval</description>
        <inlineHelpText>If checked, system will create MSPA type agreement automatically in SAP, when approved in SFDC</inlineHelpText>
        <label>Auto Create MSPA In SAP On Approval ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Block_MSPA_Creation_In_SAP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked system will not allow user to create MSPA type agreement in SAP</description>
        <inlineHelpText>If checked system will see a button on MSPA - &apos;Block in SAP&apos; to manually trigger &apos;Block&apos; of MSPA in SAP.</inlineHelpText>
        <label>Block MSPA Creation In SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Agreement SAP Setting</label>
    <listViews>
        <fullName>APTS_Agreement_SAP_Settings_For_Spain</fullName>
        <columns>NAME</columns>
        <columns>APTS_Auto_Create_MSPA_In_SAP_On_Approval__c</columns>
        <columns>APTS_Block_MSPA_Creation_In_SAP__c</columns>
        <columns>APTS_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Agreement SAP Settings For Spain</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Agreement SAP Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement SAP Settings</pluralLabel>
    <recordTypes>
        <fullName>Spain</fullName>
        <active>true</active>
        <label>Spain</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>